# arxivfyme

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE.md  README.md  arxivfyme.py  dataviz.ipynb  pyproject.toml  requirements.txt  utils.py  vectorizer.pickle
